# multiware-framework-and-vpa

./: .gitignore  CHANGELOG  CLog.cpp  CLog.hpp  CMakeLists.txt  CServices.cpp  CSysLog.cpp  CSysLog.hpp  CVpaRpc.cpp  CXmlRpc-mt.cpp  CXmlRpc.cpp  CXmlRpc.hpp  README.md  RTkGPIO.cpp  about.cpp  admin.cpp  advDiagnoseMethod.hpp  alt-xmlrpc_inetd_server.cpp  bluerays.cpp  cartoonizer.cpp  cfgini.cpp  cgibind.cpp  cgibind.h  cgicc.h  cgihtml.cpp  cgihtml.h  checkAuth.cpp  cliLogin.cpp  config.cpp  config.h  crtbind.cpp  dashboard.cpp  dashboard.h  diagnose.cpp  diagnose.h  diagnoseMethod.h  diagnoseMethod.hpp  diagutil.cpp  discovery_inetd_server.cpp  dotconfig.cpp  (+98 more)
.github/workflows/: cmake-single-platform.yml
Google_tests/: CMakeLists.txt
cfg/: cfg-section.ini
cgi-bin/: Makefile  fw-test3.py  hello.cgi  hello.cob  xmlrpc_client.py
doc/: AI-README-Deprecated.md  ANSI-escape-sequences.md  FAQ  Introduction to the Multiware Framework and Virtual Protocol Adapter.odt  On Multiware.odt  SEBoK Glossary.odt  Template:CC0.cpp  UDP-packet-size-considerations-AI.txt  ai-framework-priorities  ai-framework-suggestions-2025-07-18.txt  curl-man.txt  design.html  doc-2025-07-02.html  doc-prompt.ai  doug-userdata-fix.txt  glossary  installer-notes.txt  license  pre-requisites.sh  prefs-parms.txt  recommeded-frameworks.odt  sched_setaffinity.txt  services  shmat-man.txt  shmat.txt  shmget-man.txt  test-suite.html  vpa  vpa-developers-manual.odt  vparpc_client.stdout  xmlrpc_examples-make.stdout
doc/CC0/: Template :CC0.h  Template:CC0  Template:CC0.mak
doc/ai-musings/: svcutils.prompt
doc/deprecated/: AI-README-Deprecated.md  pre-requisites.sh
doc/doxygen/: Doxyfile
doc/futures/: cartoonizer.txt
doc/manpages/: fork-man.txt  getenv-man.txt  getpid-man.txt  ipcs-man.txt  shmget.txt  sleep-man.txt
doc/minderfiles/: libmwfw2.minder
doc/xinetd/: services-vpad-start-insert.txt
html/: diane-needs-help.html  formtest.html  fw-test1.html  fw-test2.html  project.html
include/: CLog.h  CLog.hpp  CServices.h  CSysLog.h  CSysLog.hpp  CVpaRpc.h  RTkGPIO.h  cfgini.h  cgibind.h  cgicc.h  cgihtml.h  checkAuth.h  cliLogin.h  config.h  crtbind.h  dashboard.h  diagnose.h  diagnoseDefs.h  diagnoseMethod.h  dotconfig.h  environment.h  example-vparpc-client.h  fw-limits.h  htmlbind.h  iHex.h  iPhone.h  ichibrosan.h  installer.h  license.h  mutations.h  mwfw2.cpp  mwfw2.h  osIface.h  password-hash.h  password.h  profile.h  readCsv.h  restDefs.h  restMethod.h  restRegister.h  (+25 more)
prompts/: copyright-headers  framework-suggestions
retired/: diagnose.cpp  diagnose.h  diagnoseRegister.h  vpad.cpp  vpadiscclient.cpp  vpadiscserver.cpp  vparpc.cpp  vparpc_client.cpp  vparpc_server.cpp  xmlrpc_client.cpp
schemas/: admin-menu.csv  create.csv  devo-menu.csv  diagnose.csv  experimental.csv  index.csv  journal.csv  journal_displayarea.csv  journal_textarea.csv  login.csv  passwd.csv  prefs.csv  root.csv  user-menu.csv
schemas/v1/: 20250822-opt.csv  admin-menu.csv  admin.csv  create.csv  devo-menu.csv  diagnose.csv  experimental.csv  index.csv  iphone.csv  journal.csv  journal_displayarea.csv  journal_textarea.csv  login.csv  passwd.csv  prefs.csv  root.csv  user-menu.csv
scripts/: _inetd-ip-redirect.sh  backup.py  build-and-deliver.sh  deploy-executables-to-dante.sh  doxygen.sh  get-cgicc.sh  inetd-http-redirect.sh  inetd-https-redirect.sh  inetd-ip-redirect.sh  inetd-ipcs-redirect.sh  inetd-netstat-redirect.sh  inetd-term-vpad.sh  inetd-test4-redirect.sh  make-and-deliver.sh  push-ichibrosan-github-io.sh  redir-test.sh  remove-shared-memory.sh  run-doxygen.sh  spawn_clion.sh  start-vpad.sh  sudo-make-install-framework.sh  sudo-make-install.sh  update-cpp-headers.sh  update-h-headers.sh
styles/: default-copy.css  default.css  default_style.css  doug-copy.css  doug.css  journal_style.css
